--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
 	<title data-ng-bind="$root.title + $root.titleDetail + ' | Insight'">Insight</title>
-	<meta name="keywords" content="litecoins, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-	<meta name="description" content="Litecoin Insight. View detailed information on all litecoin transactions and block. {{ $root.title + $root.titleDetail }}">
+	<meta name="keywords" content="digibytes, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
+	<meta name="description" content="DigiByte Insight. View detailed information on all digibyte transactions and block. {{ $root.title + $root.titleDetail }}">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
 	<link rel="stylesheet" href="css/main.min.css">
