--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="$root.title + $root.titleDetail + ' | Insight'">DigiExplorer</title>
+	<title data-ng-bind="$root.title + $root.titleDetail + ' | DigiExplorer'">DigiExplorer</title>
 	<meta name="keywords" content="digibytes, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-	<meta name="description" content="DigiByte Insight. View detailed information on all digibyte transactions and block. {{ $root.title + $root.titleDetail }}">
+	<meta name="description" content="DigiByte Block Explorer. View detailed information on all digibyte transactions and block. {{ $root.title + $root.titleDetail }}">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
 	<link rel="stylesheet" href="css/main.min.css">
