--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="$root.title + $root.titleDetail + ' | DigiExplorer'">DigiExplorer</title>
+	<title data-ng-bind="$root.title + $root.titleDetail + ' | DigiAssetExplorer'">DigiAssetExplorer</title>
 	<meta name="keywords" content="digibytes, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
 	<meta name="description" content="DigiByte Block Explorer. View detailed information on all digibyte transactions and block. {{ $root.title + $root.titleDetail }}">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
